<resources>
    <string name="app_name">JPC_Locator</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir Contraseña</string>
    <string name="login">Login</string>
    <string name="registrar">Registrarse</string>
    <string name="numeroTelefono">Número teléfono</string>
    <string name="nombreGrupo">Nombre del grupo</string>
    <string name="agregar">Añadir</string>
    <string name="enviar">Enviar</string>
    <string name="borrar">Borrar</string>
    <string name="dejarGrupo">Salir del grupo</string>
    <string name="olvidarPassword">Olvidé la contraseña</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="nav_header_title">JPC</string>
    <string name="nav_header_subtitle">Locator</string>
    <string name="nav_header_desc">JPC Locator</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_add_group">Crear grupo</string>
    <string name="menu_delete_group">Borrar grupo</string>
    <string name="menu_add_usuario">Añadir usuario a grupo</string>
    <string name="menu_leave_group">Salir del grupo</string>
    <string name="menu_chat">Chat</string>

    <string name="title_activity_main_navigation">JPC Locator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
